Added JWT Bearer and configured authorization with token. Configured Swagger to authorize with generated token

--- a/API.Login/appsettings.json
+++ b/API.Login/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "JwtConfigurations": {
+    "Secret": "Do_F'8-D{dob,yBvfF:T>rWQzJgd/F[lu-)vR~Ch#voLT#o.7A%?z.8sn+-Bw[o,"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
